5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4327/executions/1642_2450.log
== TEST (2019-04-15 15:42:00) 
-- CODE:
a=input("nome 1: ")
b=input("nome 2: ")

if(a.upper()>b.upper()>):
	print(a)
	print(b)
else:
	print(b)
	print(a)
-- ERROR:
File "XXXX", line 4
    if(a.upper()>b.upper()>):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:42:10) 
-- CODE:
a=input("nome 1: ")
b=input("nome 2: ")

if(a.upper() > b.upper()):
	print(a)
	print(b)
else:
	print(b)
	print(a)
-- OUTPUT:
Leon
Ada
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:42:41) 
-- CODE:
a=input("nome 1: ")
b=input("nome 2: ")

if(a.upper() < b.upper()):
	print(a)
	print(b)
else:
	print(b)
	print(a)
-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:43:11) 
-- CODE:
a=input("nome 1: ")
b=input("nome 2: ")

if(a.upper() < b.upper()):
	print(a)
	print(b)
else:
	print(b)
	print(a)
-- EXECUTION TIME:
0.154087
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Ada
Leon
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Demetrius
Marcos
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
george
WILSON
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
